[package]
name = "appengine"
version = "0.1.0"
edition = "2021"

[profile.dev-debug]
inherits = "dev"
debug = "full"

[dependencies]
elpify-lang = { path = "crates/elpify-lang" }
elpian_vm = { path = "crates/elpian-vm" }
rocksdb = "0.24.0"
once_cell = "1.18"
crossbeam = "0.8"
serde_json = "1.0.145"
anyhow = "1.0"
cfg-if.workspace = true
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
wasmedge-macro.workspace = true
wasmedge-sys = { path = "crates/wasmedge-sys", version = "0.19.4", default-features = false }
wasmedge-types.workspace = true
zmq = "0.10.0"
blockingqueue = "0.1.1"
timedmap = "1.0.2"
bollard = "=0.18.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "time"] }
futures-util = "0.3"
tar = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[workspace.dependencies]
async-wasi = { path = "crates/async-wasi", version = "0.2.0" }
cfg-if = "1.0.0"
parking_lot = "0.12.1"
wasmedge-macro = { path = "crates/wasmedge-macro", version = "0.6" }
wasmedge-types = { path = "crates/wasmedge-types", version = "0.6" }
wat = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
async-wasi = { workspace = true, optional = true }

[features]
aot = ["wasmedge-sys/aot"]
async = ["wasmedge-sys/async", "dep:async-wasi"]
default = ["async"]
ffi = ["wasmedge-sys/ffi"]
standalone = ["wasmedge-sys/standalone"]
static = ["wasmedge-sys/static"]
wasi_crypto = ["wasmedge-sys/wasi_crypto"]
wasi_nn = ["wasmedge-sys/wasi_nn"]
wasmedge_process = ["wasmedge-sys/wasmedge_process"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["aot", "wasi_crypto", "wasi_nn", "wasmedge_process", "ffi"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "crates/wasmedge-sys",
    "crates/wasmedge-types",
    "crates/wasmedge-macro",
    "crates/async-wasi",
    "crates/elpify-lang",
    "crates/elpian-vm",
]
