[package]
name = "elpify-lang"
version = "0.1.0"
edition = "2024"
description = "JS-like to Miden MASM transpiler and execution engine with proof generation/verification"
license = "MIT"
readme = "README.md"
keywords = ["miden", "zkvm", "compiler", "masm", "proofs"]
categories = ["compilers", "cryptography"]

[lib]
name = "elpify_lang"
path = "src/lib.rs"

[dependencies]
miden-vm = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.18.3" }
